--- a/mpn/Makefile.am
+++ b/mpn/Makefile.am
@@ -39,6 +39,7 @@ nodist_EXTRA_libmpn_la_SOURCES =					    \
   and_n.c andn_n.c bdivmod.c						    \
   cmp.c com_n.c copyd.c copyi.c						    \
   dc_divrem_n.c dive_1.c diveby3.c divis.c divrem.c divrem_1.c divrem_2.c   \
+  divebyff.c \
   dump.c fib2_ui.c gcd.c						    \
   gcd_finda.c gcd_1.c gcdext.c get_d.c get_str.c			    \
   hamdist.c invert_limb.c				    \
