--- a/config.in
+++ b/config.in
@@ -209,6 +209,7 @@ MA 02110-1301, USA.
 
 /* Define to 1 each of the following for which a native (ie. CPU specific)
     implementation of the corresponding routine exists.  */
+#undef HAVE_NATIVE_mpn_jaytest
 #undef HAVE_NATIVE_mpn_add_n
 #undef HAVE_NATIVE_mpn_add_nc
 #undef HAVE_NATIVE_mpn_addadd_n
