--- a/Makefile.in
+++ b/Makefile.in
@@ -401,7 +401,7 @@ SUBDIRS = tests $(am__append_1) mpn mpz mpq mpf printf scanf cxx mpbsd \
 # them.
 EXTRA_DIST = configfsf.guess configfsf.sub .gdbinit INSTALL.autoconf \
 	mpirxx.h yasm_mac.inc.fat yasm_mac.inc.nofat strip_fPIC.sh \
-	mpn/x86w mpn/x86_64w build.vc9 doc/devel doc/fdl.texi \
+	mpn/x86w mpn/x86_64w build.vc9 doc/devel doc/fdl.texi cpuid.c \
 	libmp.sym dumbmp.c gen-fac_ui.c gen-fib.c gen-bases.c \
 	gen-psqr.c
 @WANT_CXX_TRUE@GMPXX_HEADERS_OPTION = mpirxx.h
