--- a/configure.in
+++ b/configure.in
@@ -2474,7 +2474,7 @@ gmp_mpn_functions_optional="umul udiv copyi copyd com_n
 
 gmp_mpn_functions="$extra_functions					   \
   add add_1 add_n sub sub_1 sub_n mul_1 addmul_1 submul_1 lshift rshift    \
-  dive_1 diveby3 divebyff divis divrem divrem_1 divrem_2    		\
+  dive_1 diveby3 divebyff divebyBm1of divis divrem divrem_1 divrem_2       \
   fib2_ui mod_1 mod_34lsub1 mode1o pre_divrem_1 pre_mod_1 dump		   \
   mul mul_fft mul_n mul_basecase sqr_basecase random random2 pow_1	   \
   rootrem sqrtrem get_str set_str scan0 scan1 popcount hamdist cmp perfsqr \
@@ -2531,6 +2531,7 @@ define(GMP_FILE_TO_FUNCTION,
   dive_1)    	$1=divexact_1 ;;
   diveby3)   	$1=divexact_by3c ;;
   divebyff)   	$1=divexact_byff ;;
+  divebyBm1of) 	$1=divexact_byBm1of ;;
   pre_divrem_1) $1=preinv_divrem_1 ;;
   mode1o)    	$1=modexact_1c_odd ;;
   pre_mod_1) 	$1=preinv_mod_1 ;;
