euclidean divrem_1 qr,r varients in C

--- a/config.in
+++ b/config.in
@@ -232,6 +232,8 @@ MA 02110-1301, USA.
 #undef HAVE_NATIVE_mpn_copyd
 #undef HAVE_NATIVE_mpn_copyi
 #undef HAVE_NATIVE_mpn_divexact_1
+#undef HAVE_NATIVE_mpn_divrem_euclidean_qr_1
+#undef HAVE_NATIVE_mpn_divrem_euclidean_r_1
 #undef HAVE_NATIVE_mpn_divrem_1
 #undef HAVE_NATIVE_mpn_divrem_1c
 #undef HAVE_NATIVE_mpn_divrem_2
