--- a/mpn/Makefile.in
+++ b/mpn/Makefile.in
@@ -278,6 +278,7 @@ nodist_EXTRA_libmpn_la_SOURCES = \
   and_n.c andn_n.c bdivmod.c						    \
   cmp.c com_n.c copyd.c copyi.c						    \
   dc_divrem_n.c dive_1.c diveby3.c divebyff.c divis.c divrem.c divrem_1.c   \
+  divrem_euclidean_qr_1.c divrem_euclidean_r_1.c				\
   divebyBm1of.c divrem_2.c dump.c fib2_ui.c				    \
   bgcd.c gcd.c	hgcd.c hgcd2.c lgcd.c ngcd.c ngcd_matrix.c ngcd_step.c      \
   nhgcd2.c rgcd.c sgcd.c                                                    \
@@ -452,6 +453,10 @@ divrem_1_.c: divrem_1.c $(ANSI2KNR)
 	$(CPP) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) `if test -f $(srcdir)/divrem_1.c; then echo $(srcdir)/divrem_1.c; else echo divrem_1.c; fi` | sed 's/^# \([0-9]\)/#line \1/' | $(ANSI2KNR) > $@ || rm -f $@
 divrem_2_.c: divrem_2.c $(ANSI2KNR)
 	$(CPP) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) `if test -f $(srcdir)/divrem_2.c; then echo $(srcdir)/divrem_2.c; else echo divrem_2.c; fi` | sed 's/^# \([0-9]\)/#line \1/' | $(ANSI2KNR) > $@ || rm -f $@
+divrem_euclidean_qr_1_.c: divrem_euclidean_qr_1.c $(ANSI2KNR)
+	$(CPP) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) `if test -f $(srcdir)/divrem_euclidean_qr_1.c; then echo $(srcdir)/divrem_euclidean_qr_1.c; else echo divrem_euclidean_qr_1.c; fi` | sed 's/^# \([0-9]\)/#line \1/' | $(ANSI2KNR) > $@ || rm -f $@
+divrem_euclidean_r_1_.c: divrem_euclidean_r_1.c $(ANSI2KNR)
+	$(CPP) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) `if test -f $(srcdir)/divrem_euclidean_r_1.c; then echo $(srcdir)/divrem_euclidean_r_1.c; else echo divrem_euclidean_r_1.c; fi` | sed 's/^# \([0-9]\)/#line \1/' | $(ANSI2KNR) > $@ || rm -f $@
 dump_.c: dump.c $(ANSI2KNR)
 	$(CPP) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) `if test -f $(srcdir)/dump.c; then echo $(srcdir)/dump.c; else echo dump.c; fi` | sed 's/^# \([0-9]\)/#line \1/' | $(ANSI2KNR) > $@ || rm -f $@
 fib2_ui_.c: fib2_ui.c $(ANSI2KNR)
@@ -598,6 +603,8 @@ dive_1_.$(OBJEXT) dive_1_.lo diveby3_.$(OBJEXT) diveby3_.lo \
 divebyBm1of_.$(OBJEXT) divebyBm1of_.lo divebyff_.$(OBJEXT) \
 divebyff_.lo divis_.$(OBJEXT) divis_.lo divrem_.$(OBJEXT) divrem_.lo \
 divrem_1_.$(OBJEXT) divrem_1_.lo divrem_2_.$(OBJEXT) divrem_2_.lo \
+divrem_euclidean_qr_1_.$(OBJEXT) divrem_euclidean_qr_1_.lo \
+divrem_euclidean_r_1_.$(OBJEXT) divrem_euclidean_r_1_.lo \
 dump_.$(OBJEXT) dump_.lo fib2_ui_.$(OBJEXT) fib2_ui_.lo \
 fib_table_.$(OBJEXT) fib_table_.lo gcd_.$(OBJEXT) gcd_.lo \
 gcd_1_.$(OBJEXT) gcd_1_.lo gcd_finda_.$(OBJEXT) gcd_finda_.lo \
