add *.cu to rules

--- a/mpn/Makeasm.am
+++ b/mpn/Makeasm.am
@@ -45,7 +45,7 @@ PREPROCESS_FLAGS = $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 # remains ahead of .s, perhaps because .c.s is a builtin rule.  .asm works
 # fine though, and mpn/mips3 uses this.
 #
-SUFFIXES = .s .S .as .asm
+SUFFIXES = .s .S .as .asm .cu
 
 
 # .s assembler, no preprocessing.
@@ -112,3 +112,7 @@ RM_TMP = rm -f
 
 .as.lo:
 	$(LIBTOOL) --mode=compile --tag=CC $(top_srcdir)/strip_fPIC.sh $(top_builddir)$(MPIR_AS) -I $(top_builddir) $(OBJECT_FORMAT) $(GSYM_FLAG) -o $@ `test -f '$<' || echo '$(srcdir)/'`$<
+
+.cu.lo:
+	$(LIBTOOL) --mode=compile --tag=CC nvcc -c -o $@ `test -f '$<' || echo '$(srcdir)/'`$<
+
