--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -334,7 +334,7 @@ PREPROCESS_FLAGS = $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 # remains ahead of .s, perhaps because .c.s is a builtin rule.  .asm works
 # fine though, and mpn/mips3 uses this.
 #
-SUFFIXES = .s .S .as .asm
+SUFFIXES = .s .S .as .asm .cu
 
 # can be overridden during development, eg. "make RM_TMP=: mul_1.lo"
 RM_TMP = rm -f
@@ -351,7 +351,7 @@ TESTS = $(check_PROGRAMS)
 all: all-recursive
 
 .SUFFIXES:
-.SUFFIXES: .s .S .as .asm .c .lo .o .obj
+.SUFFIXES: .s .S .as .asm .cu .c .lo .o .obj
 $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am $(srcdir)/../mpn/Makeasm.am $(am__configure_deps)
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
@@ -858,6 +858,9 @@ uninstall-info: uninstall-info-recursive
 
 .as.lo:
 	$(LIBTOOL) --mode=compile --tag=CC $(top_srcdir)/strip_fPIC.sh $(top_builddir)$(MPIR_AS) -I $(top_builddir) $(OBJECT_FORMAT) $(GSYM_FLAG) -o $@ `test -f '$<' || echo '$(srcdir)/'`$<
+
+.cu.lo:
+	$(LIBTOOL) --mode=compile --tag=CC nvcc -c -o $@ `test -f '$<' || echo '$(srcdir)/'`$<
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
