--- a/tune/Makefile.in
+++ b/tune/Makefile.in
@@ -733,7 +733,7 @@ sqr_asm.asm: $(top_builddir)/mpn/sqr_basecase.asm
 	$(LIBTOOL) --mode=compile --tag=CC $(top_srcdir)/strip_fPIC.sh $(top_builddir)$(MPIR_AS) -I $(top_builddir) $(OBJECT_FORMAT) $(GSYM_FLAG) -o $@ `test -f '$<' || echo '$(srcdir)/'`$<
 
 .cu.lo:
-	$(LIBTOOL) --mode=compile --tag=CC nvcc -c -I /usr/local/cuda_sdk/common/inc/ -o $@ `test -f '$<' || echo '$(srcdir)/'`$<
+	$(LIBTOOL) --mode=compile --tag=CC nvcc -c -I $(top_builddir) -I /usr/local/cuda_sdk/common/inc/ -o $@ `test -f '$<' || echo '$(srcdir)/'`$<
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
