--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -33,7 +33,7 @@ EXTRA_libtests_la_SOURCES = x86_64call.as x86_64check.c x86call.asm x86check.c
 libtests_la_SOURCES = tests.h \
   memory.c misc.c refmpf.c refmpn.c refmpq.c refmpz.c spinner.c trace.c
 libtests_la_DEPENDENCIES = @CALLING_CONVENTIONS_OBJS@
-libtests_la_LIBADD = $(libtests_la_DEPENDENCIES) $(top_builddir)/libmpir.la
+libtests_la_LIBADD = $(libtests_la_DEPENDENCIES) $(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so
 
 check_PROGRAMS = t-bswap t-constants t-count_zeros t-gmpmax t-hightomask \
   t-modlinv t-popc t-parity t-sub
