--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -98,39 +98,48 @@ libtests_la_OBJECTS = $(am_libtests_la_OBJECTS)
 t_bswap_SOURCES = t-bswap.c
 t_bswap_OBJECTS = t-bswap.$(OBJEXT)
 t_bswap_LDADD = $(LDADD)
-t_bswap_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la
+t_bswap_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la \
+	/usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 t_constants_SOURCES = t-constants.c
 t_constants_OBJECTS = t-constants.$(OBJEXT)
 t_constants_LDADD = $(LDADD)
-t_constants_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la
+t_constants_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la \
+	/usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 t_count_zeros_SOURCES = t-count_zeros.c
 t_count_zeros_OBJECTS = t-count_zeros.$(OBJEXT)
 t_count_zeros_LDADD = $(LDADD)
-t_count_zeros_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la
+t_count_zeros_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la \
+	/usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 t_gmpmax_SOURCES = t-gmpmax.c
 t_gmpmax_OBJECTS = t-gmpmax.$(OBJEXT)
 t_gmpmax_LDADD = $(LDADD)
-t_gmpmax_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la
+t_gmpmax_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la \
+	/usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 t_hightomask_SOURCES = t-hightomask.c
 t_hightomask_OBJECTS = t-hightomask.$(OBJEXT)
 t_hightomask_LDADD = $(LDADD)
-t_hightomask_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la
+t_hightomask_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la \
+	/usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 t_modlinv_SOURCES = t-modlinv.c
 t_modlinv_OBJECTS = t-modlinv.$(OBJEXT)
 t_modlinv_LDADD = $(LDADD)
-t_modlinv_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la
+t_modlinv_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la \
+	/usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 t_parity_SOURCES = t-parity.c
 t_parity_OBJECTS = t-parity.$(OBJEXT)
 t_parity_LDADD = $(LDADD)
-t_parity_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la
+t_parity_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la \
+	/usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 t_popc_SOURCES = t-popc.c
 t_popc_OBJECTS = t-popc.$(OBJEXT)
 t_popc_LDADD = $(LDADD)
-t_popc_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la
+t_popc_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la \
+	/usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 t_sub_SOURCES = t-sub.c
 t_sub_OBJECTS = t-sub.$(OBJEXT)
 t_sub_LDADD = $(LDADD)
-t_sub_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la
+t_sub_DEPENDENCIES = libtests.la $(top_builddir)/libmpir.la \
+	/usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp =
 am__depfiles_maybe =
@@ -339,14 +348,14 @@ SUFFIXES = .cu .s .S .as .asm
 # can be overridden during development, eg. "make RM_TMP=: mul_1.lo"
 RM_TMP = rm -f
 INCLUDES = -I$(top_srcdir)
-LDADD = libtests.la $(top_builddir)/libmpir.la
+LDADD = libtests.la $(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 check_LTLIBRARIES = libtests.la
 EXTRA_libtests_la_SOURCES = x86_64call.as x86_64check.c x86call.asm x86check.c
 libtests_la_SOURCES = tests.h \
   memory.c misc.c refmpf.c refmpn.c refmpq.c refmpz.c spinner.c trace.c
 
 libtests_la_DEPENDENCIES = @CALLING_CONVENTIONS_OBJS@
-libtests_la_LIBADD = $(libtests_la_DEPENDENCIES) $(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so
+libtests_la_LIBADD = $(libtests_la_DEPENDENCIES) $(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 TESTS = $(check_PROGRAMS)
 all: all-recursive
 
