--- a/tests/mpz/Makefile.in
+++ b/tests/mpz/Makefile.in
@@ -94,306 +94,366 @@ bit_SOURCES = bit.c
 bit_OBJECTS = bit.$(OBJEXT)
 bit_LDADD = $(LDADD)
 bit_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 convert_SOURCES = convert.c
 convert_OBJECTS = convert.$(OBJEXT)
 convert_LDADD = $(LDADD)
 convert_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 dive_SOURCES = dive.c
 dive_OBJECTS = dive.$(OBJEXT)
 dive_LDADD = $(LDADD)
 dive_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 dive_ui_SOURCES = dive_ui.c
 dive_ui_OBJECTS = dive_ui.$(OBJEXT)
 dive_ui_LDADD = $(LDADD)
 dive_ui_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 io_SOURCES = io.c
 io_OBJECTS = io.$(OBJEXT)
 io_LDADD = $(LDADD)
 io_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 logic_SOURCES = logic.c
 logic_OBJECTS = logic.$(OBJEXT)
 logic_LDADD = $(LDADD)
 logic_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 reuse_SOURCES = reuse.c
 reuse_OBJECTS = reuse.$(OBJEXT)
 reuse_LDADD = $(LDADD)
 reuse_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 am__st_hamdist_SOURCES_DIST = t-hamdist.c
 @ENABLE_SHARED_TRUE@@ENABLE_STATIC_TRUE@am_st_hamdist_OBJECTS =  \
 @ENABLE_SHARED_TRUE@@ENABLE_STATIC_TRUE@	t-hamdist.$(OBJEXT)
 st_hamdist_OBJECTS = $(am_st_hamdist_OBJECTS)
 st_hamdist_LDADD = $(LDADD)
 st_hamdist_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 am__st_popcount_SOURCES_DIST = t-popcount.c
 @ENABLE_SHARED_TRUE@@ENABLE_STATIC_TRUE@am_st_popcount_OBJECTS =  \
 @ENABLE_SHARED_TRUE@@ENABLE_STATIC_TRUE@	t-popcount.$(OBJEXT)
 st_popcount_OBJECTS = $(am_st_popcount_OBJECTS)
 st_popcount_LDADD = $(LDADD)
 st_popcount_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_addsub_SOURCES = t-addsub.c
 t_addsub_OBJECTS = t-addsub.$(OBJEXT)
 t_addsub_LDADD = $(LDADD)
 t_addsub_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_aorsmul_SOURCES = t-aorsmul.c
 t_aorsmul_OBJECTS = t-aorsmul.$(OBJEXT)
 t_aorsmul_LDADD = $(LDADD)
 t_aorsmul_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_bin_SOURCES = t-bin.c
 t_bin_OBJECTS = t-bin.$(OBJEXT)
 t_bin_LDADD = $(LDADD)
 t_bin_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_cdiv_ui_SOURCES = t-cdiv_ui.c
 t_cdiv_ui_OBJECTS = t-cdiv_ui.$(OBJEXT)
 t_cdiv_ui_LDADD = $(LDADD)
 t_cdiv_ui_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_cmp_SOURCES = t-cmp.c
 t_cmp_OBJECTS = t-cmp.$(OBJEXT)
 t_cmp_LDADD = $(LDADD)
 t_cmp_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_cmp_d_SOURCES = t-cmp_d.c
 t_cmp_d_OBJECTS = t-cmp_d.$(OBJEXT)
 t_cmp_d_LDADD = $(LDADD)
 t_cmp_d_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_cmp_si_SOURCES = t-cmp_si.c
 t_cmp_si_OBJECTS = t-cmp_si.$(OBJEXT)
 t_cmp_si_LDADD = $(LDADD)
 t_cmp_si_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_cong_SOURCES = t-cong.c
 t_cong_OBJECTS = t-cong.$(OBJEXT)
 t_cong_LDADD = $(LDADD)
 t_cong_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_cong_2exp_SOURCES = t-cong_2exp.c
 t_cong_2exp_OBJECTS = t-cong_2exp.$(OBJEXT)
 t_cong_2exp_LDADD = $(LDADD)
 t_cong_2exp_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_div_2exp_SOURCES = t-div_2exp.c
 t_div_2exp_OBJECTS = t-div_2exp.$(OBJEXT)
 t_div_2exp_LDADD = $(LDADD)
 t_div_2exp_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_divis_SOURCES = t-divis.c
 t_divis_OBJECTS = t-divis.$(OBJEXT)
 t_divis_LDADD = $(LDADD)
 t_divis_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_divis_2exp_SOURCES = t-divis_2exp.c
 t_divis_2exp_OBJECTS = t-divis_2exp.$(OBJEXT)
 t_divis_2exp_LDADD = $(LDADD)
 t_divis_2exp_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_export_SOURCES = t-export.c
 t_export_OBJECTS = t-export.$(OBJEXT)
 t_export_LDADD = $(LDADD)
 t_export_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_fac_ui_SOURCES = t-fac_ui.c
 t_fac_ui_OBJECTS = t-fac_ui.$(OBJEXT)
 t_fac_ui_LDADD = $(LDADD)
 t_fac_ui_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_fdiv_SOURCES = t-fdiv.c
 t_fdiv_OBJECTS = t-fdiv.$(OBJEXT)
 t_fdiv_LDADD = $(LDADD)
 t_fdiv_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_fdiv_ui_SOURCES = t-fdiv_ui.c
 t_fdiv_ui_OBJECTS = t-fdiv_ui.$(OBJEXT)
 t_fdiv_ui_LDADD = $(LDADD)
 t_fdiv_ui_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_fib_ui_SOURCES = t-fib_ui.c
 t_fib_ui_OBJECTS = t-fib_ui.$(OBJEXT)
 t_fib_ui_LDADD = $(LDADD)
 t_fib_ui_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_fits_SOURCES = t-fits.c
 t_fits_OBJECTS = t-fits.$(OBJEXT)
 t_fits_LDADD = $(LDADD)
 t_fits_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_gcd_SOURCES = t-gcd.c
 t_gcd_OBJECTS = t-gcd.$(OBJEXT)
 t_gcd_LDADD = $(LDADD)
 t_gcd_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_gcd_ui_SOURCES = t-gcd_ui.c
 t_gcd_ui_OBJECTS = t-gcd_ui.$(OBJEXT)
 t_gcd_ui_LDADD = $(LDADD)
 t_gcd_ui_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_get_d_SOURCES = t-get_d.c
 t_get_d_OBJECTS = t-get_d.$(OBJEXT)
 t_get_d_LDADD = $(LDADD)
 t_get_d_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_get_d_2exp_SOURCES = t-get_d_2exp.c
 t_get_d_2exp_OBJECTS = t-get_d_2exp.$(OBJEXT)
 t_get_d_2exp_LDADD = $(LDADD)
 t_get_d_2exp_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_get_si_SOURCES = t-get_si.c
 t_get_si_OBJECTS = t-get_si.$(OBJEXT)
 t_get_si_LDADD = $(LDADD)
 t_get_si_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_hamdist_SOURCES = t-hamdist.c
 t_hamdist_OBJECTS = t-hamdist.$(OBJEXT)
 t_hamdist_LDADD = $(LDADD)
 t_hamdist_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_import_SOURCES = t-import.c
 t_import_OBJECTS = t-import.$(OBJEXT)
 t_import_LDADD = $(LDADD)
 t_import_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_inp_str_SOURCES = t-inp_str.c
 t_inp_str_OBJECTS = t-inp_str.$(OBJEXT)
 t_inp_str_LDADD = $(LDADD)
 t_inp_str_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_io_raw_SOURCES = t-io_raw.c
 t_io_raw_OBJECTS = t-io_raw.$(OBJEXT)
 t_io_raw_LDADD = $(LDADD)
 t_io_raw_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_jac_SOURCES = t-jac.c
 t_jac_OBJECTS = t-jac.$(OBJEXT)
 t_jac_LDADD = $(LDADD)
 t_jac_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_lcm_SOURCES = t-lcm.c
 t_lcm_OBJECTS = t-lcm.$(OBJEXT)
 t_lcm_LDADD = $(LDADD)
 t_lcm_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_lucnum_ui_SOURCES = t-lucnum_ui.c
 t_lucnum_ui_OBJECTS = t-lucnum_ui.$(OBJEXT)
 t_lucnum_ui_LDADD = $(LDADD)
 t_lucnum_ui_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_mul_SOURCES = t-mul.c
 t_mul_OBJECTS = t-mul.$(OBJEXT)
 t_mul_LDADD = $(LDADD)
 t_mul_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_mul_i_SOURCES = t-mul_i.c
 t_mul_i_OBJECTS = t-mul_i.$(OBJEXT)
 t_mul_i_LDADD = $(LDADD)
 t_mul_i_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_oddeven_SOURCES = t-oddeven.c
 t_oddeven_OBJECTS = t-oddeven.$(OBJEXT)
 t_oddeven_LDADD = $(LDADD)
 t_oddeven_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_perfpow_SOURCES = t-perfpow.c
 t_perfpow_OBJECTS = t-perfpow.$(OBJEXT)
 t_perfpow_LDADD = $(LDADD)
 t_perfpow_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_perfsqr_SOURCES = t-perfsqr.c
 t_perfsqr_OBJECTS = t-perfsqr.$(OBJEXT)
 t_perfsqr_LDADD = $(LDADD)
 t_perfsqr_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_popcount_SOURCES = t-popcount.c
 t_popcount_OBJECTS = t-popcount.$(OBJEXT)
 t_popcount_LDADD = $(LDADD)
 t_popcount_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_pow_SOURCES = t-pow.c
 t_pow_OBJECTS = t-pow.$(OBJEXT)
 t_pow_LDADD = $(LDADD)
 t_pow_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_powm_SOURCES = t-powm.c
 t_powm_OBJECTS = t-powm.$(OBJEXT)
 t_powm_LDADD = $(LDADD)
 t_powm_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_powm_ui_SOURCES = t-powm_ui.c
 t_powm_ui_OBJECTS = t-powm_ui.$(OBJEXT)
 t_powm_ui_LDADD = $(LDADD)
 t_powm_ui_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_pprime_p_SOURCES = t-pprime_p.c
 t_pprime_p_OBJECTS = t-pprime_p.$(OBJEXT)
 t_pprime_p_LDADD = $(LDADD)
 t_pprime_p_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_root_SOURCES = t-root.c
 t_root_OBJECTS = t-root.$(OBJEXT)
 t_root_LDADD = $(LDADD)
 t_root_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_scan_SOURCES = t-scan.c
 t_scan_OBJECTS = t-scan.$(OBJEXT)
 t_scan_LDADD = $(LDADD)
 t_scan_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_set_d_SOURCES = t-set_d.c
 t_set_d_OBJECTS = t-set_d.$(OBJEXT)
 t_set_d_LDADD = $(LDADD)
 t_set_d_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_set_f_SOURCES = t-set_f.c
 t_set_f_OBJECTS = t-set_f.$(OBJEXT)
 t_set_f_LDADD = $(LDADD)
 t_set_f_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_set_si_SOURCES = t-set_si.c
 t_set_si_OBJECTS = t-set_si.$(OBJEXT)
 t_set_si_LDADD = $(LDADD)
 t_set_si_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_set_str_SOURCES = t-set_str.c
 t_set_str_OBJECTS = t-set_str.$(OBJEXT)
 t_set_str_LDADD = $(LDADD)
 t_set_str_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_sizeinbase_SOURCES = t-sizeinbase.c
 t_sizeinbase_OBJECTS = t-sizeinbase.$(OBJEXT)
 t_sizeinbase_LDADD = $(LDADD)
 t_sizeinbase_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_sqrtrem_SOURCES = t-sqrtrem.c
 t_sqrtrem_OBJECTS = t-sqrtrem.$(OBJEXT)
 t_sqrtrem_LDADD = $(LDADD)
 t_sqrtrem_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_tdiv_SOURCES = t-tdiv.c
 t_tdiv_OBJECTS = t-tdiv.$(OBJEXT)
 t_tdiv_LDADD = $(LDADD)
 t_tdiv_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_tdiv_ui_SOURCES = t-tdiv_ui.c
 t_tdiv_ui_OBJECTS = t-tdiv_ui.$(OBJEXT)
 t_tdiv_ui_LDADD = $(LDADD)
 t_tdiv_ui_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 t_trial_division_SOURCES = t-trial_division.c
 t_trial_division_OBJECTS = t-trial_division.$(OBJEXT)
 t_trial_division_LDADD = $(LDADD)
 t_trial_division_DEPENDENCIES = $(top_builddir)/tests/libtests.la \
-	$(top_builddir)/libmpir.la
+	$(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so \
+	/usr/lib/libcuda.so
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp =
 am__depfiles_maybe =
@@ -585,7 +645,7 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/tests
-LDADD = $(top_builddir)/tests/libtests.la $(top_builddir)/libmpir.la
+LDADD = $(top_builddir)/tests/libtests.la $(top_builddir)/libmpir.la /usr/local/cuda/lib/libcudart.so /usr/lib/libcuda.so
 @ENABLE_SHARED_TRUE@@ENABLE_STATIC_TRUE@st_hamdist_SOURCES = t-hamdist.c
 @ENABLE_SHARED_TRUE@@ENABLE_STATIC_TRUE@st_hamdist_LDFLAGS = -static
 @ENABLE_SHARED_TRUE@@ENABLE_STATIC_TRUE@st_popcount_SOURCES = t-popcount.c
