enable parallel tests for make check

--- a/configure.in
+++ b/configure.in
@@ -69,7 +69,7 @@ dnl
 dnl  Note that there's a copy of these options in the top-level Makefile.am,
 dnl  so update there too if changing anything.
 dnl
-AM_INIT_AUTOMAKE([1.8 gnu no-dependencies])
+AM_INIT_AUTOMAKE([gnu no-dependencies parallel-tests])
 AM_CONFIG_HEADER(config.h:config.in)
 AM_MAINTAINER_MODE
 
